fix paddings on mobile (#18)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
   width: 100vw;
   background-color: var(--primary-color);
   height: 75px;
-  padding: 20px 25px;
+  padding: 20px;
   border-bottom-left-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
   z-index: 10;
