--- a/src/components/JobTile/JobTile.scss
+++ b/src/components/JobTile/JobTile.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   min-width: 200px;
-  margin: 0 15px;
+  margin-right: 15px;
   padding: 18px;
   background-color: var(--primary-color);
   border-radius: 15px;
