--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   min-width: 220px;
-  margin: 0 10px;
+  margin-right: 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
   cursor: pointer;
