--- a/src/components/YourActivity/YourActivity.scss
+++ b/src/components/YourActivity/YourActivity.scss
@@ -10,7 +10,7 @@
   }
 
   &__controls {
-    padding: 0 15px;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -38,7 +38,7 @@
     background-color: var(--light-color-2);
     border-radius: var(--border-radius);
     margin: 20px 0;
-    padding: 20px 0;
+    padding: 20px;
     overflow-x: scroll;
     display: flex;
   }
